syntax = "proto3";

option csharp_namespace = "GrpcServiceTest";

package person;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
 
// The person service definition
service Person {
	// Get all persons in the system
	rpc GetAll(stream google.protobuf.Empty) returns (stream Persons);

	// Find a person by a expecific criterial
	rpc FindOne(PersonFind) returns (PersonModel);

	// Save a new person
	rpc Save(PersonModel) returns (Result);

	// Delete a certain person
	rpc Delete(PersonFind) returns (Result);
}

// Definition of a person model
message PersonModel {
	string Id = 1;
	string name = 2;
	string lastName = 3;
	int32 age = 4;
	string email = 5;
}

// Definition of a person list
message Persons {
	repeated PersonModel list = 1;
}

// Definition of a person finder
message PersonFind {
	optional string email = 1;
	optional string Id = 2;
}

// Definition of a result from server
message Result{
	bool success = 1;
	optional string message = 2;
	optional google.protobuf.Any data = 3;
}